--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-md-3">
                     <div class="card">
 					<a class="card-title" href="index.html">  
-                        <img src="images/cremerie.JPG" class="card-img-top" alt="Crémerie">
+                        <img src="images/cremerie.jpg" class="card-img-top" alt="Crémerie">
                         <div class="card-body text-center">
                             <h5 class="card-title">Crémerie</h5>
 							<p class="card-text">Retrouvez des produits laitiers d’exception : fromages artisanaux locaux et spécialités du monde</p>
