--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
        
 
         <!-- Logos des partenaires -->
-        <section id="logos" class="py-5 d-flex hidden text-center">
+        <section id="logos" class="py-5 hidden text-center">
             <h2>Nos partenaires locaux</h2>
             <div class="d-flex justify-content-center gap-4">
                 <img src="images/logoP1.jpg" alt="Logo partenaire" width="200">
@@ -270,7 +270,7 @@
         </section>
 
  <!-- Venez visiter notre magasin -->
-        <section id="logos" class="py-5 d-flex hidden text-center">
+        <section id="logos" class="py-5 hidden text-center">
             <h2>Venez visiter notre magasin</h2>
             <div class="d-flex justify-content-center gap-4">
                 <img src="images/store.jpg" alt="Visite magasin" >
