--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header class="banner d-flex  justify-content-center text-center">
         <div>
             <h1 >Ouverture officielle : </br>  <!--class="text-white" -->
-            Dimanche 15 décembre</h1>  <!--class="text-white" -->
+            Dimanche 21 décembre</h1>  <!--class="text-white" -->
             
 			<h2 class="text-white">Venez déguster nos produits exclusifs le jour de l'ouverture !</h1>
 			
@@ -273,7 +273,7 @@
         <section id="logos" class="py-5 hidden text-center">
             <h2>Venez visiter notre magasin</h2>
             <div class="d-flex justify-content-center gap-4">
-                <img src="images/store.jpg" alt="Visite magasin" >
+                <img src="images/store.jpg" alt="Visite magasin" class="img-fluid" >
                 
             </div>
         </section>
