--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
        
 
-        <!-- Logos des partenaires -->
+        <!-- Logos des partenaires 
         <section id="logos" class="py-5 hidden text-center">
             <h2>Nos partenaires locaux</h2>
             <div class="d-flex justify-content-center gap-4">
@@ -268,8 +268,8 @@
 				    <img src="images/logoP7.jpg" alt="Logo partenaire" width="100">
             </div>
         </section>
-
- <!-- Venez visiter notre magasin -->
+-->
+ <!-- Venez visiter notre magasin
         <section id="logos" class="py-5 hidden text-center">
             <h2>Venez visiter notre magasin</h2>
             <div class="d-flex justify-content-center gap-4">
@@ -277,6 +277,7 @@
                 
             </div>
         </section>
+	     -->
         <!-- Vente particuliers et grossistes
         <section id="vente" class="py-5 vente d-flex align-items-center justify-content-center text-center">
 		<img src="images/grossistes.jpg" alt="Vente particuliers et grossistes" >
