--- a/apropos.html
+++ b/apropos.html
@@ -28,8 +28,8 @@
             </div>
             <!-- Colonne 2 : Téléphone cliquable -->
             <div class="col">
-                <a href="tel:0561216751">
-                    <i class="fas fa-phone-alt"></i> 05 61 21 67 51
+                <a href="tel:07 60 06 22 77">
+                    <i class="fas fa-phone-alt"></i> 07 60 06 22 77
                 </a>
             </div>
             <!-- Colonne 3 : Ouvert 7j/7 -->
@@ -146,7 +146,7 @@
                     <div class="col-md-6">
                         <h5>Contact</h5>
                         <p>370 route de Launaguet, 31140 Launaguet</p>
-                        <p>Tél : 05 61 21 67 51</p>
+                        <p>Tél : 07 60 06 22 77</p>
                         <p>Email : contact@lemarchedefiliz.com</p>
                     </div>
                 </div>
