--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <!-- Colonne 2 : Téléphone cliquable -->
             <div class="col">
-                <a href="tel:07 60 06 22 77">
+                <a href="tel:0760062277">
                     <i class="fas fa-phone-alt"></i> 07 60 06 22 77
                 </a>
             </div>
