--- a/apropos.html
+++ b/apropos.html
@@ -28,7 +28,7 @@
             </div>
             <!-- Colonne 2 : Téléphone cliquable -->
             <div class="col">
-                <a href="tel:07 60 06 22 77">
+                <a href="tel:0760062277">
                     <i class="fas fa-phone-alt"></i> 07 60 06 22 77
                 </a>
             </div>
@@ -122,9 +122,9 @@
             <!-- Heures d'ouverture (colonne réduite) -->
             <div class="col-md-2">
                 <h5>Heures d'ouverture</h5>
-                <p>Lun-Ven : 8h - 20h</p>
-                <p>Samedi : 9h - 19h</p>
-                <p>Dimanche : 9h - 20h</p>
+                <p>Lun-Ven : 8h30 - 19h30</p>
+                <p>Samedi : 8h30 - 20h00</p>
+                <p>Dimanche : 8h30 - 14h00</p>
             </div>
             <!-- Localisation + Contact (colonne élargie) -->
             <div class="col-md-8">
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <p>&copy; 2024 Épicerie du Monde. Tous droits réservés.</p>
+            <p>&copy; 2024 Le marché de Filiz. Tous droits réservés.</p>
         </div>
     </div>
 </footer>
