--- a/produits-frais.html
+++ b/produits-frais.html
@@ -28,8 +28,8 @@
             </div>
             <!-- Colonne 2 : Téléphone cliquable -->
             <div class="col">
-                <a href="tel:0561216751">
-                    <i class="fas fa-phone-alt"></i> 05 61 21 67 51
+                <a href="tel:0760062277">
+                    <i class="fas fa-phone-alt"></i> 07 60 06 22 77
                 </a>
             </div>
             <!-- Colonne 3 : Ouvert 7j/7 -->
@@ -154,9 +154,9 @@
             <!-- Heures d'ouverture (colonne réduite) -->
             <div class="col-md-2">
                 <h5>Heures d'ouverture</h5>
-                <p>Lun-Ven : 8h - 20h</p>
-                <p>Samedi : 9h - 19h</p>
-                <p>Dimanche : 9h - 20h</p>
+              <p>Lun-Ven : 8h30 - 19h30</p>
+                <p>Samedi : 8h30 - 20h00</p>
+                <p>Dimanche : 8h30 - 14h00</p>
             </div>
             <!-- Localisation + Contact (colonne élargie) -->
             <div class="col-md-8">
@@ -178,14 +178,14 @@
                     <div class="col-md-6">
                         <h5>Contact</h5>
                         <p>370 route de Launaguet, 31140 Launaguet</p>
-                        <p>Tél : 05 61 21 67 51</p>
+                        <p>Tél : 07 60 06 22 77</p>
                         <p>Email : contact@lemarchedefiliz.com</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="text-center mt-4">
-            <p>&copy; 2024 Épicerie du Monde. Tous droits réservés.</p>
+            <p>&copy; 2024 Le marché de Filiz. Tous droits réservés.</p>
         </div>
     </div>
 </footer>
