--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,9 @@
                         </iframe>
                         <div class="divider"></div>
                         <p><i class="fas fa-clock"></i><strong>Horaires :</strong><br>
-                            Lun-Ven : 8h - 20h<br>
-                            Samedi : 9h - 19h<br>
-                            Dimanche : 9h - 20h
+                            Lun-Ven : 8h30 - 19h30<br>
+                            Samedi : 8h30 - 20h00<br>
+                            Dimanche : 8h30 - 14h00
                         </p>
                         <div class="divider"></div>
                         <p><i class="fas fa-phone"></i><strong>Téléphone : </strong><a href="tel:0760062277" class="text-decoration-none">07 60 06 22 77</a></p>
